# agentcordon

./: .dockerignore  .env.example  .gitignore  .mcp.json  .mcp.json.pre-agentcordon  CHANGELOG.md  CLAUDE.md  CLAUDE.md.pre-agentcordon  Cargo.toml  Dockerfile  Dockerfile.release  README.md  askama.toml  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.tailscale.yml  docker-compose.yml  docker-entrypoint.sh
crates/broker/: Cargo.toml
crates/broker/src/: auth.rs  auth_tests.rs  config.rs  credential_transform.rs  daemon.rs  main.rs  mcp_sync.rs  oauth2_refresh.rs  server_client.rs  state.rs  token_refresh.rs  token_store.rs  vend.rs
crates/broker/src/routes/: callback.rs  credentials.rs  deregister.rs  health.rs  helpers.rs  mcp.rs  mod.rs  proxy.rs  register.rs  status.rs
crates/broker/static/: callback_denied.html  callback_success.html
crates/cli/: Cargo.toml
crates/cli/src/: broker.rs  broker_autostart.rs  error.rs  main.rs  signing.rs
crates/cli/src/commands/: credentials.rs  init.rs  mcp.rs  mod.rs  proxy.rs  register.rs  setup.rs  status.rs
crates/cli/src/platform/: mod.rs  unix.rs  windows.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs
crates/core/src/auth/: mod.rs  oidc.rs  password.rs
crates/core/src/auth/jwt/: mod.rs  tests.rs
crates/core/src/crypto/: aes_gcm.rs  ed25519.rs  kdf.rs  key_derivation.rs  mod.rs  password.rs  session.rs
crates/core/src/crypto/ecies/: mod.rs  tests.rs
crates/core/src/domain/: agent.rs  audit.rs  credential.rs  device.rs  enrollment.rs  mcp.rs  mcp_oauth.rs  mod.rs  oauth_provider_client.rs  oidc.rs  policy.rs  session.rs  user.rs  vault.rs  workspace.rs
crates/core/src/oauth2/: client_credentials.rs  eff_wordlist.rs  mod.rs  storage.rs  tokens.rs  types.rs
crates/core/src/policy/: actions.rs  entities.rs  mod.rs  schema.rs  templates.rs
crates/core/src/policy/cedar/: entity_builders.rs  mod.rs  tests.rs
crates/core/src/proxy/: leak_scanner.rs  mod.rs  placeholder.rs  url_match.rs  url_safety.rs
crates/core/src/services/: audit_service.rs  credential_service.rs  enrollment_service.rs  mod.rs  policy_service.rs  user_service.rs
crates/core/src/storage/: migrations.rs  mod.rs  shared.rs
crates/core/src/storage/postgres/: audit.rs  credentials.rs  device_codes.rs  enrollment.rs  mcp.rs  mcp_oauth.rs  mod.rs  oauth.rs  oauth_provider_client.rs  oidc.rs  policies.rs  rows.rs  sessions.rs  users.rs  vaults.rs  workspace.rs
crates/core/src/storage/sqlite/: audit.rs  device_codes.rs  enrollment.rs  mcp.rs  mcp_oauth.rs  mod.rs  oauth.rs  oauth_provider_client.rs  oidc.rs  policies.rs  (+5 more)
crates/core/src/transform/: mod.rs  rhai_engine.rs
crates/gateway/: Cargo.toml
crates/gateway/examples/: derive_keys.rs
crates/gateway/src/: audit.rs  cp_client.rs  credential_transform.rs  http_mcp.rs  identity.rs  lib.rs  main.rs  mcp_sync.rs  stdio.rs  vend.rs
crates/gateway/src/cli/: auth.rs  claude_md.rs  client.rs  cred_classify.rs  credentials.rs  init.rs  mcp_call.rs  mcp_install.rs  mcp_migrate.rs  mcp_serve.rs  mcp_servers.rs  mcp_tools.rs  mod.rs  output.rs  poll.rs  proxy.rs  register.rs  state.rs  status.rs  store.rs  upload_mcps.rs
crates/gateway/tests/: audit_channel.rs  identity_jwt.rs  mcp_sync.rs  security.rs  ssrf_protection.rs  v200_encrypted_key_storage.rs  v200_vend.rs  v200_workspace_identity.rs  v200_workspace_state.rs
crates/server/: Cargo.toml
crates/server/src/: auditing_policy_engine.rs  compose.rs  config.rs  credential_service.rs  crypto_helpers.rs  device_code_service.rs  events.rs  grants.rs  install_script.rs  install_script.sh  lib.rs  main.rs  metrics.rs  migrations.rs  rate_limit.rs  response.rs  seed.rs  state.rs  swagger.rs  test_helpers.rs  ui.rs
crates/server/src/docs/: agents.rs  credentials.rs  enrollment.rs  general.rs  mcp.rs  mod.rs  oauth_provider_clients.rs  oidc.rs  policies.rs  vaults.rs
crates/server/src/extractors/: authenticated_actor.rs  authenticated_user.rs  authenticated_workspace.rs  mod.rs  oauth.rs
crates/server/src/middleware/: csrf.rs  metrics.rs  mod.rs  policy.rs  rate_limit_device_approve.rs  request_id.rs  request_log.rs
crates/server/src/oauth_discovery/: cache.rs  client.rs  error.rs  metadata.rs  mod.rs  registration.rs
crates/server/src/routes/: mod.rs
crates/server/src/utils/: cookies.rs
crates/server/static/: enroll.md
crates/server/static/css/: vault.css
crates/server/static/data/: service-logos.json
crates/server/static/js/: service-icons.js
crates/server/swagger-ui/: index.html
crates/server/templates/: base.html  consent.html  consent_result.html
crates/server/templates/errors/: 404.html  500.html
crates/server/templates/pages/: activate.html  activate_confirm_replace.html  activate_denied.html  activate_expired.html  activate_success.html  agent_registration.html  audit.html  dashboard.html  login.html  settings.html
crates/server/templates/partials/: audit_detail_pane.html  credential_detail_pane.html  delete_modal.html  mcp_permissions_tab.html  nav.html  pagination.html  policy_affected_principals.html  policy_edit_statements.html  policy_tester.html  toast.html  try_it.html  workspace_detail_pane.html
crates/server/tests/: aws_credential.rs  cedar_policy_routes.rs  credential_bugs.rs  csrf.rs  device_flow_activate_ui.rs  device_flow_lifecycle.rs  device_flow_rfc8628.rs  device_flow_robustness.rs  docs.rs  e2e_two_minute_setup.rs  lifecycle_credential_proxy.rs  lifecycle_cross_principal.rs  main.rs  mcp_tests.rs  metrics.rs  oauth2_refresh_rotation.rs  oidc.rs  permission_grants.rs  phase2_tags_status.rs  policy_templates.rs  proxy.rs  user_auth.rs  v014_features.rs  v015_features.rs  v016_crypto.rs  v016_oauth2.rs  v1100_cross_feature.rs  v1100_curated_policies.rs  v1100_features.rs  v1100_policy_list.rs  v1100_policy_tester.rs  v1100_rsop_api.rs  v1100_statement_editor.rs  v1110_affected_principals.rs  v1110_agent_upload.rs  v1110_cedar_schema.rs  v1110_cross_feature.rs  v1110_dashboard.rs  v1110_device_scoped_mcps.rs  v1110_migration.rs  (+84 more)
crates/server/tests/common/: mod.rs
(+287 files in other folders)
