[workspace]
resolver = "2"
members = ["crates/core", "crates/server", "crates/broker", "crates/cli"]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
homepage = "https://agentcordon.dev"
repository = "https://github.com/hotnops/AgentCordon"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
jsonwebtoken = "9"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "json"] }
