[package]
name = "agentcordon-broker"
version.workspace = true
edition.workspace = true

[[bin]]
name = "agentcordon-broker"
path = "src/main.rs"

[dependencies]
agent-cordon-core = { path = "../core" }
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
ed25519-dalek = { version = "2", features = ["rand_core"] }
p256 = { version = "0.13", features = ["ecdsa", "jwk", "arithmetic", "ecdh", "pkcs8"] }
hkdf = "0.12"
sha2 = "0.10"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
base64 = "0.22"
hex = "0.4"
thiserror = "2"
tower-http = { version = "0.6", features = ["cors", "trace"] }
async-trait = "0.1"
futures-util = "0.3"
urlencoding = "2"
dirs = "5"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
