[package]
name = "agentcordon-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "agentcordon"
path = "src/main.rs"

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "3"
dirs = "5"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[dev-dependencies]
tempfile = "3"
