[package]
name = "agentcordon"
version = "0.1.2"
edition = "2021"

[[bin]]
name = "agentcordon"
path = "src/main.rs"

[dependencies]
colored = "3"
ed25519-dalek = { version = "2", features = ["rand_core"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
p256 = { version = "0.13", features = ["ecdsa", "jwk", "arithmetic", "ecdh", "pkcs8"] }
hkdf = "0.12"
sha2 = "0.10"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
base64 = "0.22"
futures-util = "0.3"
gethostname = "1"
hex = "0.4"
async-trait = "0.1"
thiserror = "2"
agent-cordon-core = { path = "../core" }

[dev-dependencies]
tempfile = "3"
url = "2"
wiremock = "0.6"
serial_test = "3"
